fixed address hover align

--- a/src/app/crm/contacts/addresses/addresses.component.less
+++ b/src/app/crm/contacts/addresses/addresses.component.less
@@ -41,8 +41,7 @@
             transform: translateX(-50%);
             transition: all 0.4s ease-in-out;
             display: flex !important;
-
-            i,
+            top: 40%;
             .send-icon {
                 transition: background 0.15s;
                 border-radius: 4px;
@@ -122,27 +121,6 @@
 
         .address-icons {
             top: 8px;
-        }
-
-        .actions {
-            top: 2px;
-            display: none;
-            position: absolute;
-            right: calc(~"10% + 45px");
-            background-color: #fff;
-
-            i {
-                font-size: 18px;
-                padding: 7px;
-            }
-
-            i.edit {
-                color: #00aeef;
-            }
-
-            i.delete {
-                color: #f44336;
-            }
         }
 
         .address h4 {
